Mostrar blusas encomendadas recentemente

--- a/FashionDriven.html
+++ b/FashionDriven.html
@@ -13,6 +13,7 @@
     <div class="header">
         <img src="./FashionDriven/Logo.png">
     </div>
+
     <div class="tudo">
         <main>
             
@@ -83,11 +84,16 @@
             <img src="./FashionDriven/ilustração.png">
         </aside>
     </div>
-    <footer>
 
+    <footer>
+        <div class="container">
+            <h1>Últimos pedidos</h1>
+            <div class="anteriores">
+            </div>
+        </div>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="./script.js"></script>
+    <script src="./script.js"></script> -->
 </body>
 </html>
